--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,19 @@
-// Начните писать стили здесь
+@import "./vars";
+@import "./global.scss";
+@import "./blocks/page.scss";
+@import "./blocks/cover.scss";
+@import "./blocks/main-header.scss";
+@import "./blocks/main-nav.scss";
+@import "./blocks/main-container.scss";
+@import "./blocks/button.scss";
+@import "./blocks/advantages.scss";
+@import "./blocks/progress.scss";
+@import "./blocks/result.scss";
+@import "./blocks/contacts.scss";
+@import "./blocks/main-footer.scss";
+@import "./blocks/social-list.scss";
+@import "./blocks/main-catalog.scss";
+@import "./blocks/product.scss";
+@import "./blocks/more.scss";
+@import "./blocks/additional.scss";
+@import "./blocks/form.scss";
