--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,10 +1,13 @@
 .button {
+  display: flex;
+  justify-content: center;
+  min-width: 168px;
+  min-height: 40px;
   background-color: #68b738;
   font-family: $oswald;
   color: #ffffff;
   font-weight: 400;
   font-size: 16px;
-  line-height: 20px;
   align-items: center;
   text-align: center;
   text-decoration: none;
