--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,11 +1,15 @@
 .contacts__wrapper {
   display: flex;
   justify-content: space-between;
-  padding: 26px 0 20px 20px;
+  padding: 26px 0;
   align-items: center;
+
+  @media (min-width: $tablet-width) {
+    padding: 56px 40px;
+  }
 }
 
-.contacts__wrapper--background {
+.contacts--background {
   background-color: #f2f2f2;
 }
 
@@ -16,6 +20,12 @@
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
+  margin-right: -8px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 26px;
+  }
 }
 
 .contacts__adress {
@@ -24,4 +34,27 @@
   font-size: 14px;
   line-height: 20px;
   color: #444444;
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+    line-height: 20px;
+    text-align: right;
+  }
+}
+
+.contacts__adress-indent {
+  @media (min-width: $tablet-width) {
+    display: inline-block;
+    margin-top: 16px;
+  }
+}
+
+.contacts__reponsive-map {
+  width: 100%;
+  height: 362px;
+  border: none;
+
+  @media (min-width: $tablet-width) {
+    height: 400px;
+  }
 }
