--- a/source/sass/blocks/cover.scss
+++ b/source/sass/blocks/cover.scss
@@ -1,10 +1,17 @@
-.cover {
+.cover__wrapper {
   background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/cat-background-mobile.jpg");
-  background-repeat: repeat, no-repeat;
+  background-repeat: no-repeat, no-repeat;
   background-size: 100% 302px, 320px 302px;
   background-position: top center;
   text-align: center;
   color: #ffffff;
+
+  @media (min-width: $tablet-width) {
+    position: relative;
+    margin-left: 87px;
+    min-height: 810px;
+    background-image: none;
+  }
 }
 
 .cover__title {
@@ -14,6 +21,16 @@
   font-weight: 400;
   line-height: 36px;
   font-size: 36px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
+    color: #000000;
+    padding-top: 0;
+    text-align: left;
+    padding-bottom: 0;
+    margin-bottom: 41px;
+  }
 }
 
 .cover__slogan {
@@ -22,9 +39,45 @@
   font-size: 14px;
   line-height: 14px;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 20px;
+    color: #000000;
+    margin: 0;
+    margin-bottom: 49px;
+    padding-bottom: 0;
+    text-align-last: left;
+  }
+
+  @media (min-width: $desktop-width) {
+    font-size: 20px;
+    line-height: 20px;
+    color: #000000;
+    margin-bottom: 52px;
+  }
 }
 
 .cover__button {
   width: 280px;
   height: 40px;
+
+  @media (min-width: $tablet-width) {
+    width: 244px;
+    height: 54px;
+    font-size: 20px;
+    line-height: none;
+    z-index: 1;
+    position: relative;
+  }
+}
+
+.cover__img {
+  @media (min-width: $tablet-width) {
+    position: absolute;
+    top: 204px;
+    left: -45px;
+    height: 609px;
+    width: fit-content;
+  }
 }
