--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -1,31 +1,28 @@
-.main-footer__wrapper {
+.main-footer {
   background-color: #f2f2f2;
+}
+
+.main-footer__wrapper {
   padding-top: 39px;
   padding-bottom: 32px;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 147px;
+    padding: 65px 30px;
+  }
 }
 
 .main-footer__logo {
   display: block;
   text-align: center;
-  margin-bottom: 54px;
-}
+  margin-bottom: 45px;
 
-.sponsor {
-  display: block;
-  position: relative;
-  font-family: $arial;
-  text-decoration: none;
-  color: #444444;
-  margin-left: 19px;
-}
-
-.sponsor::after {
-  position: absolute;
-  content: "";
-  background-image: url("../img/icon-html-academy.svg");
-  background-repeat: no-repeat;
-  width: 27px;
-  height: 34px;
-  top: -6px;
-  right: 21px;
+  @media (min-width: $tablet-width) {
+    margin: 0;
+    width: 163px;
+    text-align: left;
+  }
 }
