--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,10 +1,71 @@
+.main-nav {
+  display: none;
+
+  @media (min-width: $tablet-width) {
+    display: block;
+  }
+}
+
 .main-nav__list {
+  text-align: center;
   list-style: none;
   padding: 0;
+  margin: 0;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+.main-nav__list-item::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  background-color: #d9d9d9;
+  left: 0;
+  bottom: 49px;
+
+  @media (min-width: $tablet-width) {
+    display: none;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: none;
+  }
 }
 
 .main-nav__list-item {
-  margin-top: 22px;
+  margin-bottom: 46px;
+  position: relative;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 0;
+    margin-right: 34px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-right: 34px;
+  }
+}
+
+.main-nav__list-item:last-child {
+  margin-bottom: 24px;
+
+  @media (min-width: $tablet-width) {
+    margin-right: 0;
+    margin-bottom: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-right: 0;
+  }
 }
 
 .main-nav__list-item a {
@@ -14,4 +75,24 @@
   text-transform: uppercase;
   color: #000000;
   text-decoration: none;
+
+  @media (min-width: $tablet-width) {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+  }
+
+  @media (min-width: $desktop-width) {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    color: #ffffff;
+  }
+}
+
+.main-nav__list-item--active {
+  @media (min-width: $tablet-width) {
+    border-bottom: 2px solid #68b738;
+    padding-bottom: 6px;
+  }
 }
