--- a/source/sass/blocks/more.scss
+++ b/source/sass/blocks/more.scss
@@ -1,20 +1,39 @@
 .more {
   position: relative;
   padding-bottom: 50px;
+
+  @media (min-width: $tablet-width) {
+    border: 2px solid #f2f2f2;
+    height: 376px;
+    margin-top: 84px;
+    padding-right: 35px;
+    padding-left: 35px;
+  }
 }
 
-.more::before {
+.more__title::before,
+.more__title::after {
   content: "";
   position: absolute;
-  background-image: url("../img/plus.svg");
   width: 30px;
-  height: 30px;
-  top: -46px;
-  left: 138px;
+  height: 2px;
+  left: 50%;
+  top: -43px;
+  background-color: #d3d3d3;
+  transform: translateX(-50%);
+
+  @media (min-width: $tablet-width) {
+    width: 60px;
+    top: -56px;
+  }
 }
 
+.more__title::after {
+  transform: translateX(-50%) rotate(90deg);
+}
 
 .more__title {
+  position: relative;
   margin: 0;
   font-weight: 400;
   font-size: 16px;
@@ -24,6 +43,13 @@
   color: #111111;
   margin-top: 103px;
   margin-bottom: 8px;
+
+  @media (min-width: $tablet-width) {
+    margin-top: 115px;
+    font-size: 20px;
+    line-height: 22px;
+    margin-bottom: 23px;
+  }
 }
 
 .more__subtitle {
@@ -34,12 +60,15 @@
   text-align: center;
   color: #444444;
   margin-bottom: 21px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+    line-height: 18px;
+    margin-bottom: 78px;
+  }
 }
 
 .more__button {
-  display: block;
-  height: 40px;
-  padding-top: 10px;
   background-color: #f2f2f2;
   color: #444444;
 }
@@ -49,7 +78,11 @@
   position: absolute;
   width: 100%;
   height: 1px;
-  background-color: #d9d9d9;
+  background-color: #ebebeb;
   left: 0;
   bottom: 24px;
+
+  @media (min-width: $tablet-width) {
+    display: none;
+  }
 }
