--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -1,7 +1,12 @@
 .page {
-  margin: 0 auto;
+  margin: 0;
+  padding: 24px 0 0 0;
   color: #000000;
   font-family: $oswald;
   max-height: 100%;
-  width: 320px;
+  min-width: 320px;
+
+  @media (min-width: $tablet-width) {
+    padding: 26px 0 0 0;
+  }
 }
