--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,18 +1,20 @@
 @import "./vars";
 @import "./global.scss";
+@import "./blocks/button.scss";
 @import "./blocks/page.scss";
+@import "./container.scss";
 @import "./blocks/cover.scss";
 @import "./blocks/main-header.scss";
 @import "./blocks/main-nav.scss";
-@import "./blocks/main-container.scss";
-@import "./blocks/button.scss";
 @import "./blocks/advantages.scss";
+@import "./blocks/main-catalog.scss";
+@import "./blocks/catalog.scss";
 @import "./blocks/progress.scss";
 @import "./blocks/result.scss";
 @import "./blocks/contacts.scss";
 @import "./blocks/main-footer.scss";
+@import "./blocks/sponsor.scss";
 @import "./blocks/social-list.scss";
-@import "./blocks/main-catalog.scss";
 @import "./blocks/product.scss";
 @import "./blocks/more.scss";
 @import "./blocks/additional.scss";
