--- a/source/sass/container.scss
+++ b/source/sass/container.scss
@@ -1,6 +1,7 @@
 .container {
-  margin: 0 auto;
   width: 280px;
+  margin: 0 auto;
+  // padding: 0 20px;
 
   @media (min-width: $tablet-width) {
     width: 768px;
@@ -8,7 +9,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    width: 1068px;
-    padding: 20px 64px;
+    width: 1280px;
+    padding: 0 30px;
   }
 }
