--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,3 +1,11 @@
+.advantages {
+  @media (min-width: $desktop-width) {
+    display: flex;
+    // Почему не работает space-between
+    justify-content: space-between;
+  }
+}
+
 .advantages__wrapper {
   position: relative;
   margin-top: 20px;
@@ -16,8 +24,20 @@
     padding-left: 53px;
     margin-bottom: 30px;
   }
+
+  @media (min-width: $desktop-width) {
+    min-width: 570px;
+    min-height: 374px;
+    margin-bottom: 71px;
+    padding: 77px 53px 0;
+  }
 }
 
+.advantages__wrapper--slim {
+  @media (min-width: $desktop-width) {
+    margin-right: 80px;
+  }
+}
 
 .advantages__wrapper--slim::before {
   content: "";
@@ -33,6 +53,14 @@
     background-image: url("../img/cat-slim-tablet.svg");
     top: 85px;
     right: 67px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 100px;
+    height: 106px;
+    background-image: url("../img/cat-slim-desktop.svg");
+    top: 40px;
+    left: 57px;
   }
 }
 
@@ -51,6 +79,14 @@
     top: 85px;
     right: 22px;
   }
+
+  @media (min-width: $desktop-width) {
+    width: 134px;
+    height: 100px;
+    background-image: url("../img/cat-mass-desktop.svg");
+    top: 47px;
+    left: 39px;
+  }
 }
 
 .advantages__title {
@@ -68,6 +104,10 @@
     text-align: left;
     margin-left: 0;
   }
+
+  @media (min-width: $desktop-width) {
+    text-align: center;
+  }
 }
 
 .advantages__discription {
@@ -84,11 +124,19 @@
     width: 51%;
     padding-top: 24px;
   }
+
+  @media (min-width: $desktop-width) {
+    width: 100%;
+  }
 }
 
 .advantages__discription--mass {
   @media (min-width: $tablet-width) {
     width: 52%;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 450px;
   }
 }
 
