--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -5,4 +5,10 @@
     grid-template-rows: auto;
     column-gap: 60px;
   }
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    column-gap: 80px;
+    grid-template-rows: auto;
+  }
 }
