--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,3 +1,7 @@
+.contacts {
+  position: relative;
+}
+
 .contacts__wrapper {
   display: flex;
   justify-content: space-between;
@@ -6,6 +10,18 @@
 
   @media (min-width: $tablet-width) {
     padding: 56px 40px;
+  }
+
+  @media (min-width: $desktop-width) {
+    position: absolute;
+    width: 565px;
+    height: 198px;
+    z-index: 1;
+    background-color: #ffffff;
+    padding: 0 80px;
+    top: 95px;
+    left: 110px;
+
   }
 }
 
@@ -50,6 +66,7 @@
 }
 
 .contacts__reponsive-map {
+  display: block;
   width: 100%;
   height: 362px;
   border: none;
