--- a/source/sass/blocks/cover.scss
+++ b/source/sass/blocks/cover.scss
@@ -1,16 +1,42 @@
-.cover__wrapper {
+.cover {
+  position: relative;
   background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/cat-background-mobile.jpg");
   background-repeat: no-repeat, no-repeat;
   background-size: 100% 302px, 320px 302px;
   background-position: top center;
+
+  @media (min-width: $tablet-width) {
+    background-image: none;
+  }
+}
+
+.cover::before {
+  @media (min-width: $desktop-width) {
+    position: absolute;
+    content: "";
+    width: 729px;
+    height: 694px;
+    background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/cat-background-desktop.jpg");
+    background-repeat: no-repeat, no-repeat;
+    background-size: 729px 694px;
+    background-position: top right;
+    right: 0;
+    top: -108px;
+  }
+}
+
+.cover__wrapper {
   text-align: center;
   color: #ffffff;
 
   @media (min-width: $tablet-width) {
     position: relative;
-    margin-left: 87px;
     min-height: 810px;
     background-image: none;
+  }
+
+  @media (min-width: $desktop-width) {
+    min-height: 680px;
   }
 }
 
@@ -30,6 +56,11 @@
     text-align: left;
     padding-bottom: 0;
     margin-bottom: 41px;
+    padding-left: 80px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 110px;
   }
 }
 
@@ -48,6 +79,7 @@
     margin-bottom: 49px;
     padding-bottom: 0;
     text-align-last: left;
+    padding-left: 80px;
   }
 
   @media (min-width: $desktop-width) {
@@ -69,6 +101,7 @@
     line-height: none;
     z-index: 1;
     position: relative;
+    margin-left: 80px;
   }
 }
 
@@ -76,8 +109,13 @@
   @media (min-width: $tablet-width) {
     position: absolute;
     top: 204px;
-    left: -45px;
+    left: 70px;
     height: 609px;
     width: fit-content;
+  }
+
+  @media (min-width: $desktop-width) {
+    top: 0;
+    left: 432px;
   }
 }
