--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -4,6 +4,10 @@
   @media (min-width: $tablet-width) {
     display: block;
   }
+
+  @media (min-width: $desktop-width) {
+    z-index: 1;
+  }
 }
 
 .main-nav__list {
@@ -86,7 +90,7 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 30px;
-    color: #ffffff;
+    color: #111111;
   }
 }
 
@@ -94,5 +98,17 @@
   @media (min-width: $tablet-width) {
     border-bottom: 2px solid #68b738;
     padding-bottom: 6px;
+  }
+}
+
+.main-nav__list-item--desktop a {
+  @media (min-width: $desktop-width) {
+    color: #ffffff;
+  }
+}
+
+.main-nav__list-item--active-desktop {
+  @media (min-width: $desktop-width) {
+    border-bottom: 2px solid #ffffff;
   }
 }
