--- a/source/sass/blocks/progress.scss
+++ b/source/sass/blocks/progress.scss
@@ -20,11 +20,18 @@
   margin-bottom: 53px;
 
   @media (min-width: $tablet-width) {
+    counter-reset: number 0;
     position: relative;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 280px 280px;
     column-gap: 55px;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 60px;
   }
 }
 
@@ -37,6 +44,10 @@
     background-color: #e6e6e6;
     left: 0;
     bottom: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: none;
   }
 }
 
@@ -57,6 +68,7 @@
   padding-left: 80px;
 
   @media (min-width: $tablet-width) {
+    counter-increment: number;
     display: grid;
     grid-template-columns: auto;
     grid-template-rows: auto;
@@ -65,9 +77,27 @@
   }
 }
 
+.progress__item::after {
+  @media (min-width: $tablet-width) {
+    content: counter(number);
+    position: absolute;
+    z-index: -1;
+    font-family: $oswald;
+    font-size: 280px;
+    line-height: 280px;
+    color: #f2f2f2;
+    top: -38px;
+    right: 89px;
+  }
+
+  @media (min-width: $desktop-width) {
+    right: 16px;
+  }
+}
+
 .progress__item::before {
-  position: absolute;
   content: "";
+  position: absolute;
   background-color: #68b738;
   width: 60px;
   height: 60px;
@@ -96,20 +126,4 @@
 
 .progress__item--timer::before {
   background-image: url("../img/timer.svg");
-}
-
-.progress__background-number {
-  display: none;
-
-  @media (min-width: $tablet-width) {
-    display: inline-block;
-    position: absolute;
-    z-index: -1;
-    font-family: $oswald;
-    font-size: 280px;
-    line-height: 280px;
-    color: #f2f2f2;
-    top: -38px;
-    right: 89px;
-  }
 }
