--- a/source/sass/blocks/result.scss
+++ b/source/sass/blocks/result.scss
@@ -43,6 +43,10 @@
   @media (min-width: $tablet-width) {
     margin-bottom: 91px;
   }
+
+  @media (min-width: $desktop-width) {
+    width: 430px;
+  }
 }
 
 .result__block {
@@ -103,6 +107,12 @@
 
   @media (min-width: $tablet-width) {
     margin-right: 0;
+    font-size: 20px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 0;
+    margin-top: 60px;
   }
 }
 
@@ -113,6 +123,11 @@
     margin: 0;
     display: block;
     text-align: right;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: inline-block;
+    margin-left: 92px;
   }
 }
 
