Проблема с файлом form

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -5,7 +5,7 @@
 .contacts__wrapper {
   display: flex;
   justify-content: space-between;
-  padding: 26px 0;
+  padding: 26px 20px;
   align-items: center;
 
   @media (min-width: $tablet-width) {
@@ -20,8 +20,7 @@
     background-color: #ffffff;
     padding: 0 80px;
     top: 95px;
-    left: 110px;
-
+    left: calc((100% - 1220px) / 2);
   }
 }
 
