--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -38,7 +38,7 @@
 
 .main-header__toggle {
   position: absolute;
-  right: 0;
+  right: 20px;
   top: 18px;
 
   @media (min-width: $tablet-width) {
