--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -1,3 +1,7 @@
+.additional__wrapper {
+  position: relative;
+}
+
 .additional__list {
   margin-bottom: 20px;
 
@@ -21,47 +25,62 @@
   font-weight: 400;
   line-height: 24px;
   margin-bottom: 49px;
+  background-color: #ffffff;
+  width: fit-content;
+  padding: 0 22px;
+  margin-left: -22px;
 
   @media (min-width: $tablet-width) {
     font-size: 36px;
     line-height: 36px;
     margin-top: 36px;
-    padding-bottom: 80px;
-    padding-left: 35px;
     margin-bottom: 25px;
-    border-bottom: 1px solid #cdcdcd;
+    padding: 0 36px 80px 36px;
+    margin-left: 0;
   }
 
   @media (min-width: $desktop-width) {
     margin-top: 40px;
     margin-bottom: 75px;
-    padding: 0;
     border: none;
+    padding: 0 36px;
+  }
+}
+
+.additional__wrapper::before {
+  content: "";
+  position: absolute;
+  background-color: #68b738;
+  width: 100%;
+  height: 2px;
+  top: 15px;
+  z-index: 0;
+
+  @media (min-width: $tablet-width) {
+    top: 22px;
   }
 }
 
 .additional__title::after {
   content: "";
   position: absolute;
-  width: 100%;
+  width: 104%;
   height: 1px;
   background-color: #d9d9d9;
-  left: 0;
+  left: 23px;
   bottom: -38px;
 
   @media (min-width: $tablet-width) {
-    display: none;
+    width: 627px;
+    background-color: #cdcdcd;
+    left: 40px;
+    bottom: 0;
   }
 
   @media (min-width: $desktop-width) {
-    display: block;
-    content: "";
-    position: absolute;
-    width: 72%;
-    height: 1px;
-    background-color: #cdcdcd;
     left: 0;
     bottom: -76px;
+    width: 876px;
   }
 }
 
@@ -181,8 +200,8 @@
 
   @media (min-width: $tablet-width) {
     bottom: 25px;
-    width: 112%;
-    left: -37px;
+    width: 100%;
+    left: 0;
   }
 
   @media (min-width: $desktop-width) {
