--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -9,7 +9,6 @@
   font-weight: 400;
   font-size: 36px;
   line-height: 36px;
-  text-transform: uppercase;
   margin-bottom: 37px;
 
   @media (min-width: $tablet-width) {
@@ -39,8 +38,10 @@
 }
 
 .form__personality {
-  display: flex;
-  justify-content: space-between;
+  @media (min-width: $desktop-width) {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .form__list-info {
@@ -173,12 +174,29 @@
 }
 
 // контактные данные
+.form__contacts::before {
+  content: "";
+  position: absolute;
+  background-color: #68b738;
+  width: 100%;
+  height: 2px;
+  top: 15px;
+  z-index: 0;
+
+  // @media (min-width: $tablet-width) {
+  //   top: 22px;
+  // }
+}
 
 .form__contacts-head {
-  padding: 0;
   font-size: 24px;
   line-height: 26px;
   margin-bottom: 35px;
+  background-color: #ffffff;
+  width: fit-content;
+  padding: 0 22px;
+  margin-left: -22px;
+  position: relative;
 
   @media (min-width: $tablet-width) {
     font-size: 36px;
@@ -265,7 +283,7 @@
   height: 15px;
   background-image: url("../img/mail-icon.svg");
   background-repeat: no-repeat;
-  right: 15px;
+  right: 36px;
   top: 16px;
 }
 
@@ -275,7 +293,7 @@
   height: 20px;
   background-image: url("../img/tel-icon.svg");
   background-repeat: no-repeat;
-  right: 13px;
+  right: 34px;
   top: 12px;
 }
 
@@ -283,16 +301,35 @@
 .form__contacts,
 .form__discription,
 .form__additional {
+  position: relative;
   margin: 0;
   padding: 0;
   border: none;
 }
 
+.form__discription::before {
+  content: "";
+  position: absolute;
+  background-color: #68b738;
+  width: 100%;
+  height: 2px;
+  top: 15px;
+  z-index: 0;
+
+  // @media (min-width: $tablet-width) {
+  //   top: 22px;
+  // }
+}
+
 .form__discription-head {
-  padding: 0;
   font-size: 24px;
   line-height: 26px;
   margin-bottom: 47px;
+  background-color: #ffffff;
+  width: fit-content;
+  padding: 0 22px;
+  margin-left: -22px;
+  position: relative;
 
   @media (min-width: $tablet-width) {
     font-size: 36px;
@@ -322,11 +359,29 @@
 }
 
 // Дополнительно
+.form__additional::before {
+  content: "";
+  position: absolute;
+  background-color: #68b738;
+  width: 100%;
+  height: 2px;
+  top: 15px;
+  z-index: 0;
+
+  // @media (min-width: $tablet-width) {
+  //   top: 22px;
+  // }
+}
+
 .form__additional-head {
-  padding: 0;
   font-size: 24px;
   line-height: 26px;
   margin-bottom: 39px;
+  background-color: #ffffff;
+  width: fit-content;
+  padding: 0 22px;
+  margin-left: -22px;
+  position: relative;
 
   @media (min-width: $tablet-width) {
     font-size: 36px;
