--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -221,25 +221,38 @@
 .additional__promo {
   width: 100%;
   height: 290px;
-  background-image: url("../img/icon-gift.svg"), linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/promo-cat-mob.jpg");
+  background-image: url("../img/icon-gift.svg"), linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/promo-cat-catalog/promo-cat-mob.jpg");
   background-repeat: no-repeat;
+  background-size: auto, auto, 100% auto;
   background-position: top 65px center, top center, top center;
   margin-bottom: 35px;
 
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/icon-gift.svg"), linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/promo-cat-catalog/promo-cat-mob@2x.jpg");
+  }
+
   @media (min-width: $tablet-width) {
     height: 200px;
-    background-image: url("../img/icon-gift.svg"), linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/promo-cat-tablet.png");
+    background-image: url("../img/icon-gift.svg"), linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/promo-cat-catalog/promo-cat-tablet.jpg");
     background-position: top 55px left 79px, top center, top center;
     margin-bottom: 76px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/icon-gift.svg"), linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/promo-cat-catalog/promo-cat-tablet@2x.jpg");
+    }
   }
 
   @media (min-width: $desktop-width) {
     width: 245px;
     height: 288px;
-    background-image: url("../img/icon-gift.svg"), linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/promo-cat-mob.jpg");
+    background-image: url("../img/icon-gift.svg"), linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/promo-cat-catalog/promo-cat-desktop.jpg");
     background-repeat: no-repeat;
     background-position: top 65px center, top center, top center;
     margin-bottom: 0;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/icon-gift.svg"), linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/promo-cat-catalog/promo-cat-desktop@2x.jpg");
+    }
   }
 }
 
