--- a/source/sass/blocks/cover.scss
+++ b/source/sass/blocks/cover.scss
@@ -1,9 +1,13 @@
 .cover {
   position: relative;
-  background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/cat-background-mobile.jpg");
+  background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/index-backgrond-cat/cat-background-mobile.jpg");
   background-repeat: no-repeat, no-repeat;
   background-size: 100% 302px, 320px 302px;
   background-position: top center;
+
+  @media (min-resolution: 2dppx) {
+    background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/index-backgrond-cat/cat-background-mobile@2x.jpg");
+  }
 
   @media (min-width: $tablet-width) {
     background-image: none;
@@ -19,13 +23,17 @@
     position: absolute;
     content: "";
     height: 694px;
-    background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/cat-background-desktop.jpg");
+    background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/index-backgrond-cat/cat-background-desktop.jpg");
     background-repeat: no-repeat, no-repeat;
     background-size: auto 694px;
     background-position: top left;
     right: 0;
     left: calc((100% - 1220px) / 2 + 598px);
     top: -143px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/index-backgrond-cat/cat-background-desktop@2x.jpg");
+    }
   }
 }
 
