--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,11 +1,4 @@
-.form {
-  @media (min-width: $tablet-width) {
-    padding: 0 37px;
-  }
-}
-
 .form__title {
-  margin: 0;
   font-weight: 400;
   font-size: 36px;
   line-height: 36px;
@@ -23,17 +16,17 @@
 }
 
 .form__subtitle {
-  margin: 0;
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
   margin-bottom: 39px;
-  width: 15em;
+  width: 226px;
 
   @media (min-width: $tablet-width) {
     font-size: 20px;
     line-height: 30px;
     margin-bottom: 66px;
+    width: 323px;
   }
 }
 
@@ -174,7 +167,16 @@
 }
 
 // контактные данные
-.form__contacts::before {
+
+.form__contact-decor,
+.form__discription-decor,
+.form__additional-decor {
+  position: relative;
+}
+
+.form__contact-decor::before,
+.form__discription-decor::before,
+.form__additional-decor::before {
   content: "";
   position: absolute;
   background-color: #68b738;
@@ -183,9 +185,9 @@
   top: 15px;
   z-index: 0;
 
-  // @media (min-width: $tablet-width) {
-  //   top: 22px;
-  // }
+  @media (min-width: $tablet-width) {
+    top: 20px;
+  }
 }
 
 .form__contacts-head {
@@ -196,7 +198,6 @@
   width: fit-content;
   padding: 0 22px;
   margin-left: -22px;
-  position: relative;
 
   @media (min-width: $tablet-width) {
     font-size: 36px;
@@ -283,7 +284,7 @@
   height: 15px;
   background-image: url("../img/mail-icon.svg");
   background-repeat: no-repeat;
-  right: 36px;
+  right: 17px;
   top: 16px;
 }
 
@@ -293,7 +294,7 @@
   height: 20px;
   background-image: url("../img/tel-icon.svg");
   background-repeat: no-repeat;
-  right: 34px;
+  right: 16px;
   top: 12px;
 }
 
@@ -302,23 +303,8 @@
 .form__discription,
 .form__additional {
   position: relative;
-  margin: 0;
-  padding: 0;
+  margin: 0 auto;
   border: none;
-}
-
-.form__discription::before {
-  content: "";
-  position: absolute;
-  background-color: #68b738;
-  width: 100%;
-  height: 2px;
-  top: 15px;
-  z-index: 0;
-
-  // @media (min-width: $tablet-width) {
-  //   top: 22px;
-  // }
 }
 
 .form__discription-head {
@@ -329,7 +315,6 @@
   width: fit-content;
   padding: 0 22px;
   margin-left: -22px;
-  position: relative;
 
   @media (min-width: $tablet-width) {
     font-size: 36px;
@@ -359,20 +344,6 @@
 }
 
 // Дополнительно
-.form__additional::before {
-  content: "";
-  position: absolute;
-  background-color: #68b738;
-  width: 100%;
-  height: 2px;
-  top: 15px;
-  z-index: 0;
-
-  // @media (min-width: $tablet-width) {
-  //   top: 22px;
-  // }
-}
-
 .form__additional-head {
   font-size: 24px;
   line-height: 26px;
