--- a/source/sass/blocks/result.scss
+++ b/source/sass/blocks/result.scss
@@ -1,9 +1,19 @@
 .result {
   background-color: #eaeaea;
   padding-top: 25px;
+  padding-bottom: 45px;
+  width: 100%;
 
   @media (min-width: $tablet-width) {
-    background-color: inherit;
+    background-color: initial;
+    background-image: linear-gradient(360deg, #eaeaea 40%, transparent 0%);
+    min-height: 1080px;
+    padding-bottom: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    background-image: linear-gradient(360deg, #f2f2f2 77%, transparent 23%);
+    min-height: 600px;
   }
 }
 
@@ -23,6 +33,11 @@
   @media (min-width: $tablet-width) {
     font-size: 60px;
     line-height: 60px;
+    margin-bottom: 63px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 146px;
   }
 }
 
@@ -37,6 +52,12 @@
     font-size: 16px;
     line-height: 24px;
     margin-bottom: 54px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-top: 0;
+    margin-bottom: 69px;
+    max-width: 436px;
   }
 }
 
@@ -102,6 +123,10 @@
     font-size: 14px;
     line-height: 14px;
   }
+
+  @media (min-width: $desktop-width) {
+    background-color: #f2f2f2;
+  }
 }
 
 .result__total {
@@ -137,22 +162,76 @@
   }
 }
 
-.result__slider {
-  padding-bottom: 40px;
+// Слайдер кот
+
+.comparison {
+  --comparison: 50%;
+  max-width: 280px;
+  width: 280px;
+  position: relative;
+  margin: 0 auto;
 
   @media (min-width: $tablet-width) {
-    padding-bottom: 40px;
+    width: 560px;
+    height: 512px;
   }
 }
 
-.result__slider-line {
-  margin: 0 auto;
+.comparison__wrapper {
+  @media (min-width: $tablet-width) {
+    max-width: 560px;
+    width: 560px;
+    height: 512px;
+    margin: 0 auto;
+  }
+}
+
+.comparison__top {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: var(--comparison, 50%);
+  overflow-x: hidden;
+  background-color: #eaeaea;
+
+  @media (min-width: $tablet-width) {
+    // background-color: transparent;
+    // как тут задать фон???
+  }
+}
+
+.comparison__fat {
+  width: 280px;
+  min-width: 280px;
+}
+
+.comparison__slider {
+  position: absolute;
   width: 4px;
   height: 256px;
-  background: #666666;
+  background-color: #666666;
   border-radius: 2px;
+  z-index: 1;
+  top: -3px;
+  left: 50%;
 
   @media (min-width: $tablet-width) {
     height: 512px;
+    top: 30px;
+  }
+}
+
+.comparison__slider::before {
+  position: absolute;
+  content: "";
+  background-image: url("../img/rows-range.svg");
+  width: 40px;
+  height: 40px;
+  top: 111px;
+  left: -18px;
+
+  @media (min-width: $tablet-width) {
+    top: 221px;
   }
 }
